--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,9 @@
 }
 
 body {
-  width     :800px;
+/*  width     :800px;*/
+  width     :100%;
   margin    :20px auto;
-/*  background:#f8f8f8;
-  border    :1px solid #888; */
 }
 
 html {
@@ -50,15 +49,15 @@ li a:hover, .button:hover {
   margin-left:40px;
 }
 
-.info {
+/*.info {
   background :lightgreen;
   color      :blue;
   border     :1px solid green;
   padding    :5px 10px;
   margin-left:40px;
-}
+}*/
 
-.menu li, .button {
+/*.menu li, .button {
   display           :inline;
   padding           :4px 6px;
   border            :1px solid #777;
@@ -69,7 +68,7 @@ li a:hover, .button:hover {
   -moz-box-shadow   :2px 2px 2px #888;
   -webkit-box-shadow:2px 2px 2px #888;
   box-shadow        :2px 2px 2px #888;
-}
+}*/
 
 .subhead {
   font-weight:bold;
@@ -96,6 +95,7 @@ li a:hover, .button:hover {
 }
 
 .nav {
+        width: 100%;
 	margin: 0px;
 	padding: 0px;
 	list-style: none;       
@@ -103,7 +103,7 @@ li a:hover, .button:hover {
 
 .nav li {
 	float: left;
-	width: 160px;
+	width: 300px;
 	position: relative;
         background: rgba(0,0,0,0.3);
 }
@@ -131,7 +131,7 @@ li a:hover, .button:hover {
 }
 
 .nav ul li {
-	width: 160px;
+	width: 300px;
 	float: left;
 }
 
