--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,14 @@ li a:hover, .button:hover {
 	color: white;
 }
 
+.cancelX {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #800000;
+}
 
 .login-page {
   width: 360px;
