--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,7 @@ li a:hover, .button:hover {
   background: #800000;
   width: 100%;
   border: 0;
+  margin-top: 15px;
   padding: 15px;
   color: #FFFFFF;
   font-size: 14px;
@@ -199,6 +200,11 @@ li a:hover, .button:hover {
 }
 .form button:hover,.form button:active,.form button:focus {
   background: #990000;
+}
+
+.form button:disabled {
+  background: #f2f2f2;
+  color: black;
 }
  .form .message {
   margin: 15px 0 0;
