--- a/styles.css
+++ b/styles.css
@@ -49,34 +49,13 @@ li a:hover, .button:hover {
   margin-left:40px;
 }
 
-/*.info {
-  background :lightgreen;
-  color      :blue;
-  border     :1px solid green;
-  padding    :5px 10px;
-  margin-left:40px;
-}*/
-
-/*.menu li, .button {
-  display           :inline;
-  padding           :4px 6px;
-  border            :1px solid #777;
-  background        :#ddd;
-  color             :#d04;
-  margin-right      :8px;
-  border-radius     :5px;
-  -moz-box-shadow   :2px 2px 2px #888;
-  -webkit-box-shadow:2px 2px 2px #888;
-  box-shadow        :2px 2px 2px #888;
-}*/
-
 .subhead {
   font-weight:bold;
 }
 
-.diag {
+.pageMessage {
     text-align: center;
-    margin-top: 100px;
+    margin: 100px 0 50px;
 }
 
 .taken, .error {
