--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,6 @@ li a:hover, .button:hover {
   font-size: 12px;
 }
 .form .message a {
-  color: #800000;
+  color: #3185b9; 
   text-decoration: none;
 }
