--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,11 @@
-/* Example 26-13: styles.css */
+
 
 * {
-  font-family:verdana,sans-serif;
+  font-family: verdana,sans-serif;
   font-size  :14pt;
 }
 
 body {
-/*  width     :800px;*/
   width     :100%;
   margin    :20px auto;
 }
@@ -55,7 +54,8 @@ li a:hover, .button:hover {
 
 .pageMessage {
     text-align: center;
-    margin: 100px 0 50px;
+    margin: 100px auto;
+    max-width: 900px;
 }
 
 .taken, .error {
@@ -80,28 +80,31 @@ li a:hover, .button:hover {
 
 .nav {
         width: 100%;
-	margin: 0px;
+        min-width: 900px;
+        height: 37px;
+	margin: auto;
 	padding: 0px;
-	list-style: none;       
+	list-style: none;  
+        background: linear-gradient(gold, maroon, maroon);
 }
 
 .nav li {
 	float: left;
+        margin: auto;
 	width: 300px;
 	position: relative;
-        background: rgba(0,0,0,0.3);
+        background: linear-gradient(gold, maroon, maroon);
 }
 
 .nav li a {
 	text-decoration: none;
-	color: black;
+	color: white;
 	display: block;
 	padding: 7px 8px;
-	/*border-top: 1px solid maroon;*/
 }
 
 .nav li a:hover {
-	color: white;
+	color: gold;
 }
 
 /*=== submenu ===*/
@@ -117,19 +120,19 @@ li a:hover, .button:hover {
 .nav ul li {
 	width: 300px;
 	float: left;
+        background: maroon;
 }
 
 .nav ul a {
 	display: block;
 	height: 15px;
 	padding: 7px 8px;
-	color: black;
+	color: white;
 	text-decoration: none;
-/*	border-bottom: 1px solid maroon;*/
 }
 
 .nav ul li a:hover {
-	color: white;
+	color: gold;
 }
 
 .cancelX {
@@ -146,6 +149,7 @@ li a:hover, .button:hover {
   padding: 8% 0 0;
   margin: auto;
 }
+
 .form {
   position: relative;
   z-index: 1;
@@ -156,8 +160,8 @@ li a:hover, .button:hover {
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
+
 .form input {
-/*  font-family: "Roboto", sans-serif;*/
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -167,8 +171,8 @@ li a:hover, .button:hover {
   box-sizing: border-box;
   font-size: 14px;
 }
+
 .form button {
-/*  font-family: "Roboto", sans-serif;*/
   text-transform: uppercase;
   outline: 0;
   background: #800000;
@@ -182,6 +186,7 @@ li a:hover, .button:hover {
   transition: all 0.3 ease;
   cursor: pointer;
 }
+
 .form button:hover,.form button:active,.form button:focus {
   background: #990000;
 }
@@ -190,11 +195,13 @@ li a:hover, .button:hover {
   background: #f2f2f2;
   color: black;
 }
+
  .form .message {
   margin: 15px 0 0;
   color: #b3b3b3;
   font-size: 12px;
 }
+
 .form .message a {
   color: #3185b9; 
   text-decoration: none;
