--- a/styles.css
+++ b/styles.css
@@ -211,3 +211,50 @@ li a:hover, .button:hover {
   color: #3185b9; 
   text-decoration: none;
 }
+
+.styleButton {
+  text-transform: uppercase;
+  outline: 0;
+  background: #800000;
+  width: 100%;
+  border: 0;
+  margin-top: 15px;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+
+.styleButton:hover, .styleButton:active, .styleButton:focus {
+  background: #990000;
+}
+
+.buttonRow {
+    
+}
+
+.tile_div {
+    margin-top: 30px;
+    margin-left: 35%;
+    white-space: nowrap;
+}
+
+.tile_div button {
+    display: inline-block;
+    float: left;
+    margin-right: 5px;
+    width: 300px;
+/*    border: none;
+    background: #800000;
+    color: #FFFFFF;*/
+}
+
+.tile_div button.last {
+    margin-right: 0;
+}
+
+.clear {
+    clear: both;
+}
