--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ li a:hover, .button:hover {
 	width: 300px;
 	float: left;
         background: maroon;
+        z-index: 999;
 }
 
 .nav ul a {
@@ -134,6 +135,7 @@ li a:hover, .button:hover {
 	padding: 7px 8px;
 	color: white;
 	text-decoration: none;
+        z-index: 999;
 }
 
 .nav ul li a:hover {
@@ -257,4 +259,10 @@ li a:hover, .button:hover {
 
 .clear {
     clear: both;
+}
+
+.topSpace {
+    margin-top: 40px;
+    margin-left: 40px;
+    margin-right: 40px
 }
