--- a/styles.css
+++ b/styles.css
@@ -266,3 +266,83 @@ li a:hover, .button:hover {
     margin-left: 40px;
     margin-right: 40px
 }
+
+/* autocomplete */
+
+/*#student {
+	width: 200px;
+	font-size: 1em;
+}*/
+
+.searchresults {
+        display: none;
+	width: 300px;
+	position: absolute;
+	border: 1px solid #f2f2f2;
+        background-color: #ffffff;
+        margin-top: -15px;
+        z-index: 20;
+}
+
+.searchresults .studentitem, .carditem {
+        text-align: left;
+	padding: 3px;
+	font-family: Helvetica;
+	border-bottom: 1px solid #f2f2f2;
+}
+
+.searchresults .studentitem:last-child, .carditem:last-child {
+	border-bottom: 0px;
+}
+
+.searchresults .studentitem:hover, .carditem:hover {
+	background-color: #f2f2f2;
+	cursor: pointer;
+}
+
+/* ToolTips */
+
+[data-tip] {
+	position:relative;
+
+}
+[data-tip]:before {
+	content:'';
+	/* hides the tooltip when not hovered */
+	display:none;
+	content:'';
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 5px solid #666666;
+	position:absolute;
+	top:30px;
+	left:35px;
+	z-index:8;
+	font-size:0;
+	line-height:0;
+	width:0;
+	height:0;
+}
+[data-tip]:after {
+	display:none;
+	content:attr(data-tip);
+	position:absolute;
+	top:35px;
+	left:0px;
+	padding:5px 8px;
+        background: #666666;
+	color:#fff;
+	z-index:9;
+	font-size: 0.75em;
+	height:18px;
+	line-height:18px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	white-space:nowrap;
+	word-wrap: normal;
+}
+[data-tip]:hover:before,
+[data-tip]:hover:after {
+	display:block;
+}
